[package]
name = "netsnmp-sys"
description = "Rust FFI bindings to Net-SNMP"
version = "0.1.0"
authors = ["Hroi Sigurdsson <hroi@asdf.dk>"]
keywords = ["networking", "snmp"]
repository = "https://github.com/hroi/netsnmp-sys"
documentation = "https://hroi.github.com/netsnmp-sys/"
links = "netsnmp"
build = "build.rs"
license = "BSD-2-Clause"

[dependencies]
libc = "0.2.*"
